fix various layout issues

--- a/includes/css/layout.styl
+++ b/includes/css/layout.styl
@@ -4,7 +4,7 @@
 body
   color $text-color
   font-family 'Ubuntu Condensed', 'Segoe UI', roboto, 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif
-  font-size 18px
+  font-size 15px
   line-height 1.2
   max-width 1200px
   margin 0 auto
@@ -39,7 +39,7 @@ img
   h2 span
     animation-name fade-in
     opacity 0
-    
+
   h1
     animation-delay 800ms
     margin .5em 0li
@@ -82,16 +82,16 @@ ul.nav
   li
     display block
 
-.projects 
-  margin 2em 0 
+.projects
+  margin 2em 0
 
   .project
     background-color $subtle-color
     border 1px solid $text-color
     margin 1em 0
     width 100%
-  
-    img 
+
+    img
       width 100%
 
     .description
@@ -143,7 +143,7 @@ ul.nav
 .block
   margin 2em 0
 
-.hex 
+.hex
   display block
   margin 0 auto
   position relative
@@ -175,7 +175,7 @@ ul.nav
     .hex__link
       float left
       line-height 3em
-      
+
       span
         margin 0 0 0 .2em
 
@@ -196,18 +196,23 @@ ul.nav
     top 20%
     left 20%
 
-    &.annotated 
+    &.annotated
       color $subtle-color
 
       p
         margin .2em 0
       h2
-        margin 1em 0
+        margin .3em 0
         font-weight 600
 
-@media (min-width: 700px)
+@media (min-width: 400px)
   body
     font-size 18px
+
+  .hex
+    .hex__content.annotated
+      h2
+        margin 1em 0
 
 @media (min-width: 800px)
   body
